--- a/HomePek.html
+++ b/HomePek.html
@@ -8,7 +8,7 @@
         <a href="EducationPek.html" class="nav">Portfolio</a>
         <a href="EducationPek.html" class="nav">Contact Me</a>
         <body>
-            <p></p>
+            <p>Kemi lng guys hindi q pa ginagawa,,,,,😝😝</p>
             
         </body>
     </head>
